--- a/publications.html
+++ b/publications.html
@@ -127,10 +127,10 @@
             <h3 class="push-down-4"><span>Conference Talks and Posters</span></h3>
             
             <ul class="publications">
-               <li align="justify"><b>Nath, S. S.*</b>, Shen, T., & Dayan, P. (2024). Simplicity in COmpelxity. <i>Poster at "ICLR Re-align"</i>, Vienna, Austria, May 2024.</li>
-               <li align="justify"><b>Nath, S. S.</b>, Braendle, F., Schulz, E., Dayan, P.*, & Brielmann, A. Relating objective complexity, subjective complexity, and beauty. <i>Talk at TeaP 2023</i>, Trier, Germany, March 2023.</li>
-               <li align="justify"><b>Nath, S. S.</b>, Braendle, F., Schulz, E., Dayan, P.*, & Brielmann, A. Spatial Complexity and Intricacy Predict Subjective Complexity. <i>Poster at "Visual Science of Arts"</i>, Amsterdam, Netherlands, August 2022.</li>
-               <li align="justify"><b>Nath, S. S.</b>, & Pachur, T. (2021). The affect gap in risky choice with positive outcomes. <i>Poster at "Subjective Probability Utility & Decision Making"</i>, Warwick, UK, 22-24 August 2021.</li>
+               <li align="justify"><b>Nath, S. S.*</b>, Shen, T., & Dayan, P. (2024). Simplicity in Compelxity. <i>Poster at ICLR Re-align Workshop</i>, Vienna, Austria, May 2024.</li>
+               <li align="justify"><b>Nath, S. S.</b>, Braendle, F., Schulz, E., Dayan, P.*, & Brielmann, A. Relating objective complexity, subjective complexity, and beauty. <i>Talk at TeaP</i>, Trier, Germany, March 2023.</li>
+               <li align="justify"><b>Nath, S. S.</b>, Braendle, F., Schulz, E., Dayan, P.*, & Brielmann, A. Spatial Complexity and Intricacy Predict Subjective Complexity. <i>Poster at VSAC</i>, Amsterdam, Netherlands, August 2022.</li>
+               <li align="justify"><b>Nath, S. S.</b>, & Pachur, T. (2021). The affect gap in risky choice with positive outcomes. <i>Poster at SPUDM</i>, Warwick, UK, 22-24 August 2021.</li>
             </ul>
             
             <!-- Dissertation abstract -->
