--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
          </div> <!-- Collect the nav links, forms, and other content for toggling -->
          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-<!--                <li id="projects"><a class="montserrat" href="research.html">Research</a></li> -->
+               <li id="projects"><a class="montserrat" href="research.html">Research</a></li>
                <li id="research"><a class="montserrat" href="publications.html">Publications</a></li>
                <li id="vitae"><a class="montserrat" href="CV.html">CV</a></li>
             </ul>
