--- a/research.html
+++ b/research.html
@@ -90,8 +90,8 @@
 
       <div class="row">
          <div class="col-sm-12">
-            <h1>Research</h1>
-            <p align="justify">Below are some of my research projects. Feel free to reach out to me if any of these appeal to you or you have any questions.</p>
+            <h1>Passion Projects</h1>
+            <p align="justify">Some fun projects I worked on on-the-side :)</p>
 
          </div>
 
@@ -102,7 +102,7 @@
          <div class="col-sm-6 col-md-4">
            <a href="https://kyblab.tuebingen.mpg.de/fma/pattern_maker/" target="_blank">
            <div class="panel panel-default">
-              <div class="panel-footer" align="center">Creativity in Pixel Patterns</div>
+              <div class="panel-footer" align="center">Automatone 2.0</div>
               <div class="panel-body"><img src="img/pattern.png" class="img img-responsive img-thumbnail">
               <!-- <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>-->  
             </div>
@@ -113,7 +113,7 @@
         <div class="col-sm-6 col-md-4">
            <!-- <a href="https://github.com/surabhisnath/CONDEC_EEG" target="_blank"> -->
            <div class="panel panel-default">
-              <div class="panel-footer" align="center">Continuous-space EEG Decoding</div>
+              <div class="panel-footer" align="center">Codenames spymaster</div>
               <div class="panel-body"><img src="img/eeg.png" class="img img-responsive img-thumbnail"> 
             </div>
            </div>
@@ -122,7 +122,7 @@
          
         <div class="col-sm-6 col-md-4">
            <div class="panel panel-default">
-              <div class="panel-footer" align="center">Risky Choice with Positive Affective Outcomes</div>
+              <div class="panel-footer" align="center">Patterns of the Universe</div>
               <div class="panel-body"><img src="img/affect.png" class="img img-responsive img-thumbnail">
             </div>
            </div>
@@ -135,7 +135,7 @@
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
-              <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
+              <div class="panel-footer" align="center">Inverse Cellular Automata</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
               <!-- <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>-->  
             </div>
@@ -148,7 +148,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 3</h5>
                </div> -->
-               <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
+               <div class="panel-footer" align="center">CogSci Research Evolution</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
                </div>
             </div>
