--- a/research.html
+++ b/research.html
@@ -161,7 +161,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
                </div> -->
-               <div class="panel-footer", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
+               <div class="panel-footer", align="center">Diwali Rangolis</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
               </div>
             </div>
