--- a/research.html
+++ b/research.html
@@ -168,7 +168,7 @@
             </a>
          </div>
 
-         <div class="col-sm-6 col-md-4">
+<!--          <div class="col-sm-6 col-md-4">
           <a href='https://github.com/surabhisnath/BCI-Emotion-Detection' target="_blank">
            <div class="panel panel-default">
                <!-- <div class="panel-heading">
@@ -207,7 +207,7 @@
                </div>
             </div>
             </a>
-         </div>
+         </div> -->
          
          <!--
          <div class="col-sm-6 col-md-4">
@@ -313,6 +313,7 @@
 
       </div> 
    -->
+   
    <!-- .row -->
    </div>
 
