--- a/research.html
+++ b/research.html
@@ -168,46 +168,45 @@
             </a>
          </div>
 
-<!--          <div class="col-sm-6 col-md-4">
-          <a href='https://github.com/surabhisnath/BCI-Emotion-Detection' target="_blank">
-           <div class="panel panel-default">
-               <!-- <div class="panel-heading">
-                  <h5 class="panel-title">Project 5</h5>
-               </div> -->
-               <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering on EEG data</div>
-               <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
-               </div>
-            </div>
-            </a>
-         </div>
+<!-- <div class="col-sm-6 col-md-4"> -->
+<!--           <a href='https://github.com/surabhisnath/BCI-Emotion-Detection' target="_blank"> -->
+<!--            <div class="panel panel-default"> -->
+<!--                <!-- <div class="panel-heading"> -->
+<!--                   <h5 class="panel-title">Project 5</h5> -->
+<!--                </div> --> -->
+<!--                <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering on EEG data</div> -->
+<!--                <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail"> -->
+<!--                </div> -->
+<!--             </div> -->
+<!--             </a> -->
+<!--          </div> -->
          
-         <div class="col-sm-6 col-md-4">
-            <a href='https://github.com/surabhisnath/Data-Sonification-Crime-Against-Women-in-Indian-States' target="_blank">
-           <div class="panel panel-default">
-               <!-- <div class="panel-heading">
-                  <h5 class="panel-title">Project 2</h5>
-               </div> -->
-               <div class="panel-footer" align="center">Data sonification for sensitizing youth on crime against women in India</div>
-               <div class="panel-body"><img src="img/datasonification.jpg" class="img img-responsive img-thumbnail">
-               </div>
-            </div>
-            </a>
-         </div>
+<!--          <div class="col-sm-6 col-md-4"> -->
+<!--             <a href='https://github.com/surabhisnath/Data-Sonification-Crime-Against-Women-in-Indian-States' target="_blank"> -->
+<!--            <div class="panel panel-default"> -->
+<!--                <!-- <div class="panel-heading"> -->
+<!--                   <h5 class="panel-title">Project 2</h5> -->
+<!--                </div> --> -->
+<!--                <div class="panel-footer" align="center">Data sonification for sensitizing youth on crime against women in India</div> -->
+<!--                <div class="panel-body"><img src="img/datasonification.jpg" class="img img-responsive img-thumbnail"> -->
+<!--                </div> -->
+<!--             </div> -->
+<!--             </a> -->
+<!--          </div> -->
 
 
-         <div class="col-sm-6 col-md-4">
-            <a href='https://github.com/surabhisnath/Breast-Cancer-Detection-Deep-Neural-Networks' target="_blank">
-           <div class="panel panel-default">
-               <!--
-               <div class="panel-heading">
-                  <h5 class="panel-title">Project 6</h5>
-               </div> -->
-               <div class="panel-footer">Breast cancer detection in mammograms using deep neural networks</div>
-               <div class="panel-body"><img src="img/bcd.png" class="img img-responsive img-thumbnail">
-               </div>
-            </div>
-            </a>
-         </div> -->
+<!--          <div class="col-sm-6 col-md-4"> -->
+<!--             <a href='https://github.com/surabhisnath/Breast-Cancer-Detection-Deep-Neural-Networks' target="_blank"> -->
+<!--            <div class="panel panel-default"> -->
+<!--                <!-- <div class="panel-heading"> -->
+<!--                   <h5 class="panel-title">Project 6</h5> -->
+<!--                </div> --> -->
+<!--                <div class="panel-footer">Breast cancer detection in mammograms using deep neural networks</div> -->
+<!--                <div class="panel-body"><img src="img/bcd.png" class="img img-responsive img-thumbnail"> -->
+<!--                </div> -->
+<!--             </div> -->
+<!--             </a> -->
+<!--          </div> -->
          
          <!--
          <div class="col-sm-6 col-md-4">
