--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                <li id="research"><a class="montserrat" href="publications.html">Publications</a></li>
-               <li id="projects"><a class="montserrat" href="research.html">Passion Projects</a></li>
+<!--                <li id="projects"><a class="montserrat" href="research.html">Passion Projects</a></li> -->
                <li id="vitae"><a class="montserrat" href="CV.html">CV</a></li>
             </ul>
          </div><!-- /.navbar-collapse -->
